scripts/templates/kubernetes/service/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: francisar-chatgpt-v1
spec:
  ports:
  - name: http
    port: 10080
    protocol: TCP
    targetPort: 10080
  - name: grpc
    port: 10081
    protocol: TCP
    targetPort: 10081
  sessionAffinity: None
  type: ClusterIP
